🐛 fix: pre overflow and summary size

--- a/themes/iglou.eu/assets/sass/_global.scss
+++ b/themes/iglou.eu/assets/sass/_global.scss
@@ -49,6 +49,11 @@ img {
     max-width: 100%;
 }
 
+pre {
+    overflow: auto;
+    padding-bottom: .25em;
+}
+
 .main-menu {
     a {
         border-bottom: .1em solid;
