--- a/themes/iglou.eu/assets/sass/_markdown.scss
+++ b/themes/iglou.eu/assets/sass/_markdown.scss
@@ -25,7 +25,6 @@
         border-radius: 3px;
         font-size: 85%;
         line-height: 1.45;
-        overflow: auto;
         padding: 16px;
 
         code {
